# DevEnvProbe

./: .gitignore  README.md  architecture_review.json  index.html  package-lock.json  package.json
.trellis/: .template-hashes.json
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  process_runner.rs
src-tauri/src/contracts/: mod.rs
src-tauri/src/deploy/: args.rs  mod.rs  steps.rs  utils.rs
src-tauri/src/docker/: mod.rs
src-tauri/src/install/: mod.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/system/: mod.rs
src-tauri/src/tools/: detect.rs  mod.rs  specs.rs
src-tauri/src/version/: checker.rs  custom_api.rs  docker_hub.rs  errors.rs  git_checker.rs  github.rs  health_check.rs  mod.rs  rollback.rs  source_trait.rs  state.rs  types.rs  updater.rs
src/config/: app-config.ts
src/constants/: config.ts
src/core/: index.ts  lifecycle.ts  navigation.ts  page-dom-cache.ts
src/modules/: docker-data.ts  shell-ui.ts  system-trend-state.ts  system-trend-view.ts  system-trend.ts
src/pages/: DockerPage.ts  SystemPage.ts  ToolsPage.ts  index.ts
src/services/: deploy-service.ts  docker-service.ts  docker-version-service.ts  index.ts  install-path-policy.ts  system-service.ts  tools-service.ts  update-service.ts  version-config-storage.ts
src/state/: deploy-state.ts  docker-state.ts  docker-version-state.ts  index.ts  system-state.ts  tools-state.ts
src/ui/: docker-components.ts  docker-version-ui.ts  index.ts  metric-card.ts
tests/: README.md  package-lock.json  package.json
(+74 files in other folders)
