[package]
name = "dev-env-probe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "dev_env_probe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
rayon = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = "1.0"
thiserror = "1.0"
chrono = "0.4"
regex = "1.10"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
